--- a/Index_calculator.html
+++ b/Index_calculator.html
@@ -26,7 +26,7 @@
             <input type="button" value='9' onclick="Solve('9')">
             <input type="button" value='x' onclick="Solve('*')">
             <br>
-            <input type="button" value='4' onmousedown="Solve('4')">
+            <input type="button" value='4' onclick="Solve('4')">
             <input type="button" value='5' onclick="Solve('5')">
             <input type="button" value='6' onclick="Solve('6')">
             <input type="button" value='-' onclick="Solve('-')">
